<resources>
    <string name="app_name">pajareandoApp</string>
    <string name="r_a_merlo_6_1500_lisboa">Rúa Merlo, 6 1500 - Lisboa</string>
    <string name="registrarse">Registrarse</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="erithacus_pajareando_org">erithacus@pajareando.org</string>
    <string name="erithacus_rubecula">Erithacus Rubecula</string>
    <string name="contrase_a">Contraseña</string>
    <string name="_34689689689">+34689689689</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="pajareando">Pajareando</string>
    <string name="t_tulo">Título</string>
    <string name="descripci_n">Descripción</string>
    <string name="imagen_de_p_jaro">Imagen de pájaro</string>
    <string name="scientific_name">Scientific Name</string>
    <string name="common_name">Common name</string>
    <string name="description">Description</string>
    <string name="imagen_del_ave">Imagen del ave</string>
    <string name="bird_image">Bird image</string>
    <string name="logout">Logout</string>
    <string name="a_adir_a_favoritos">Añadir a favoritos</string>
    <string name="todas_las_aves">Todas las Aves</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="bot_n_de_a_adir_a_favoritos">Botón de añadir a favoritos</string>
    <string name="volver">Volver</string>
    <string name="aves_favoritas">Aves Favoritas</string>
    <string name="detalles_del_ave">Detalles del Ave</string>
    <string name="activar_dark_mode">activar Dark Mode</string>
    <string name="imagen_de_bird_commonname">Imagen de  + bird.commonName</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cambia_tu_contrase_a">Cambia tu Contraseña</string>
    <string name="confirmar">Confirmar</string>
    <string name="repetir_contrase_a">Repetir contraseña</string>
    <string name="generar_p_jaro_aleatorio">Generar pájaro aleatorio</string>
    <string name="perfil">Perfil</string>
    <string name="dashboard">Dashboard</string>
    <string name="favoritos">Favoritos</string>
    <string name="random">Random</string>
    <string name="bot_n_para_navegar_a_dashboard">Botón para navegar a Dashboard</string>
    <string name="bot_n_para_navegar_a_aves_favoritas">Botón para navegar a aves favoritas</string>
    <string name="bot_n_para_navegar_a_p_jaro_aleatorio">Botón para navegar a pájaro aleatorio</string>
    <string name="bot_n_para_navegar_a_perfil">Botón para navegar a perfil</string>
    <string name="bot_n_para_cerrar_sesi_n">Botón para cerrar sesión</string>
</resources>