<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            style="@style/ToolbarStyle"
            app:title="Todas las Aves"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/todas_las_aves"
                    android:textSize="20sp"
                    android:gravity="start"
                    android:textColor="?attr/colorOnPrimary"
                    app:layout_constraintEnd_toStartOf="@id/favoriteButton"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/favoriteButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    app:icon="@drawable/baseline_favorite_24"
                    android:contentDescription="@string/bot_n_de_a_adir_a_favoritos"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/darkModeButton"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/darkModeButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    app:icon="@drawable/baseline_light_mode_24"
                    android:contentDescription="@string/dark_mode"
                    app:layout_constraintEnd_toStartOf="@id/logoutButton"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/logoutButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    app:icon="@drawable/baseline_logout_24"
                    android:contentDescription="@string/logout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.MaterialToolbar>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/topAppBar"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>