<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.ProfileFragment">

    <data>
        <variable
            name="user"
            type="com.lmr.pajareandoapp.models.User" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp">

        <!-- Tarjeta que contiene la información -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <!-- Imagen de perfil -->
                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/profileImage"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/baseline_person_24"
                    app:shapeAppearanceOverlay="@style/RoundedImageView"
                    android:contentDescription="Icono de Usuario"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="16dp" />

                <!-- Contenedor de Nombre y Email -->
                <LinearLayout
                    android:id="@+id/user_info_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintStart_toEndOf="@id/profileImage"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="12dp">

                    <!-- Nombre de usuario -->
                    <TextView
                        android:id="@+id/nombreUsuario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{user.name}"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <!-- Email del usuario -->
                    <TextView
                        android:id="@+id/emailUsuario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{user.email}"
                        android:textSize="16sp"
                        android:textColor="@android:color/darker_gray" />
                </LinearLayout>

                <!-- Contenedor de los campos de contraseña y botón -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/user_info_container"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="24dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cambia_tu_contrase_a"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="16dp" />

                    <!-- Campo de contraseña actual -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_actual_password"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Contraseña actual">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_text_actual_pass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Campo de nueva contraseña -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_input_new_password"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Nueva contraseña"
                        android:layout_marginTop="6dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_text_new_pass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Campo de repetir contraseña -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_input_confirm_password"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/repetir_contrase_a"
                        android:layout_marginTop="6dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_text_confirm_pass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Botón para cambiar contraseña -->
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_change_password"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/confirmar"
                        android:layout_marginTop="10dp" />

                    <!-- Switch para modo oscuro -->
                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switch_dark_mode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Dark Mode"
                        android:layout_marginTop="10dp"
                        android:gravity="center_horizontal"/>
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
